Fix alignment issue between textarea and rendered divs, turns out you gotta use pixels for this to work well

--- a/src/styles/app.less
+++ b/src/styles/app.less
@@ -1,6 +1,6 @@
 :root {
-  --font-size: 1.4em;
-  --line-height: 1.8em;
+  --font-size: 24px;
+  --line-height: 34px;
   --text-color: rgb(227, 230, 232);
   --bg-color: rgb(33, 34, 38);
   --current-line-bg-color: rgb(39, 41, 45);
@@ -30,7 +30,6 @@ body {
     font-size: var(--font-size);
     line-height: var(--line-height);
     font-family: 'Roboto Mono';
-    color: var(--text-color);
   }
 
   textarea {
@@ -41,7 +40,7 @@ body {
     color: transparent;
     background: transparent;
     caret-color: var(--text-color);
-    padding: 0.2em 0.5em;
+    padding: 0 0.5em;
   }
 
   .texts {
